button styling for card added

--- a/cards.css
+++ b/cards.css
@@ -253,3 +253,26 @@
 
   object-fit: contain;
 }
+.button-container-card {
+  padding: 1rem 2rem;
+  margin: 1rem;
+  width: 95%;
+  font-weight: 500;
+  font-size: 1.8rem;
+  border: none;
+  border-radius: 1rem 1rem 1rem 1rem;
+
+  color: black;
+  font-family: "roboto";
+}
+.primary-button {
+  background-color: #49a0eb;
+}
+.opaque-button {
+  background-color: khaki;
+  width: 50%;
+  margin-bottom: -0.3rem;
+}
+.secondary-button {
+  background-color: khaki;
+}
