documentation for button added

--- a/index.css
+++ b/index.css
@@ -278,48 +278,90 @@
   background-color: khaki;
 }
 
-/* responsive image */
-/* .responsive-image {
-  width: 45rem;
-  height: 25rem;
-}
-.responsive-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-.round-image {
-  margin: 1rem;
-  width: 20rem;
-  height: 20rem;
-}
-.round-image img {
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-}
+/* button component */
 
-@media only screen and (max-width: 450px) {
-  .responsive-image {
-    width: 95vw;
-    height: 40vh;
-  }
+.button-container-button {
+  padding: 1rem 2rem;
+  margin: 1rem;
+  /* margin-left:-0.3rem; */
+  display: inline-block;
+  width: 15rem;
+  font-weight: 800;
+  font-size: 1.8rem;
+  border: none;
+  border-radius: 1rem 1rem 1rem 1rem;
+
+  color: black;
+  font-family: "roboto";
 }
-@media only screen and (min-width: 450px) and (max-width: 850px) {
-  .responsive-image {
-    width: 60vw;
-    height: 40vh;
-  }
+.primary-button {
+  background-color: #49a0eb;
 }
-@media only screen and (max-width: 450px) {
-  .round-image {
-    width: 5rem;
-    height: 5rem;
-  }
+.secondary-button {
+  background-color: #63edff;
+  color: black;
+  font-family: "roboto";
 }
-@media only screen and (min-width: 450px) and (max-width: 850px) {
-  .round-image {
-    width: 10rem;
-    height: 10rem;
-  }
-} */
+.danger-button {
+  background-color: red;
+  color: white;
+  font-family: "roboto";
+}
+.toggle-button {
+  position: relative;
+
+  width: 16rem;
+  height: 5rem;
+  border: none;
+
+  background-color: #63edff;
+  color: black;
+  font-family: "roboto";
+}
+.icon-badge-number {
+  position: absolute;
+  top: 0;
+  right: -2.1rem;
+  width: 2.2rem;
+  height: 2.2rem;
+  background: #209bab;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.toggle-badge {
+  width: 16rem;
+  height: 5rem;
+  position: relative;
+}
+.hide {
+  display: none;
+}
+.floating-action-button {
+  margin-top: 2rem;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  border: none;
+  background-color: #49a0eb;
+  z-index: 1;
+}
+.floating-action-button-small {
+  margin-top: 2rem;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: none;
+  background-color: #49a0eb;
+}
+.floating-action-button:hover,
+.floating-action-button-small:hover {
+  background-color: #63edff;
+}
+.floating-action-img {
+  width: 100%;
+  object-fit: contain;
+  align-items: center;
+}
