--- a/index.css
+++ b/index.css
@@ -365,3 +365,86 @@
   object-fit: contain;
   align-items: center;
 }
+
+/* snackbar */
+#snackbar-message {
+  padding: 1rem;
+  visibility: hidden;
+  width: 30rem;
+  height: 3rem;
+  background-color: #333;
+  color: #fff;
+  position: fixed;
+  z-index: 1;
+  left: 55rem;
+  bottom: 1.5rem;
+  font-size: 2rem;
+}
+.button-container-snackbar {
+  padding: 1rem 2rem;
+  margin: 1rem;
+  background-color: #63edff;
+  font-weight: 500;
+  font-size: 1.8rem;
+  border: none;
+  border-radius: 1rem 1rem 1rem 1rem;
+
+  color: black;
+  font-family: "roboto";
+}
+.snack-exit {
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  border: none;
+}
+
+.show-bar {
+  visibility: visible !important;
+  /* animation:fadein 0.5s; */
+}
+.hide-snack {
+  display: block;
+}
+
+#snackbar-message {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #63edff;
+}
+#snackbar-message-left {
+  padding: 1rem;
+  visibility: hidden;
+  width: 30rem;
+  height: 3rem;
+  background-color: #333;
+  color: #fff;
+  position: fixed;
+  z-index: 1;
+
+  bottom: 1.5rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #63edff;
+}
+#snackbar-message-center {
+  padding: 1rem;
+  visibility: hidden;
+  width: 30rem;
+  height: 3rem;
+  background-color: #333;
+  color: #fff;
+  position: fixed;
+  z-index: 1;
+
+  bottom: 38rem;
+  left: 55rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #63edff;
+}
