--- a/index.css
+++ b/index.css
@@ -708,3 +708,30 @@
 .user-input-warning {
   border: 0.1rem solid red;
 }
+
+/* alerts  */
+.alert {
+  width: 30rem;
+  height: 4rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.3rem;
+  align-items: center;
+  margin: 0.5rem;
+
+  background-color: #209bab;
+}
+.alert img {
+  width: 2.5rem;
+  padding: 0.5rem;
+  color: pink;
+}
+.alert-msg {
+  font-size: 2rem;
+}
+.success-info {
+  background-color: green;
+}
+.warning-info {
+  background-color: yellow;
+}
