--- a/index.css
+++ b/index.css
@@ -804,3 +804,105 @@
   border-radius: 100px;
   transform: matrix(1, 0, 0, -1, 0, 0);
 }
+
+/* navbar */
+
+a {
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  color: black;
+}
+.navbar {
+  width: 100%;
+  height: 8rem;
+  background-color: #49a0eb;
+  display: flex;
+  justify-content: center;
+}
+.navbar .brand {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  font-size: 2rem;
+  color: black;
+  margin-left: 2rem;
+}
+
+.navbar .leftside {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-left: 0;
+  flex: 60%;
+
+  /* align-items:center; */
+}
+.navbar .leftside .links {
+  display: flex;
+}
+.navbar .leftside .links a {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 2rem;
+  margin-left: 3rem;
+}
+.navbar .rightside {
+  display: flex;
+  flex: 50%;
+  max-height: 8rem;
+  align-items: center;
+  margin-right: 1rem;
+  justify-content: flex-end;
+}
+.navbar .rightside input {
+  width: 25rem;
+  height: 3.5rem;
+}
+.navbar .rightside button {
+  height: 3.65rem;
+  width: 5rem;
+  background-color: #63edff;
+  border: none;
+  cursor: pointer;
+}
+:root {
+  font-size: 62.5%;
+}
+.badges-component {
+  display: flex;
+  justify-content: space-around;
+}
+.notification {
+  position: relative;
+  width: 5rem;
+  height: 5rem;
+}
+.icon-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  color: #333333;
+  background: lavenderblush;
+  border: none;
+  outline: none;
+  border-radius: 50%;
+}
+.icon-img {
+  width: 100%;
+}
+.icon-badge-number {
+  position: absolute;
+  top: 0;
+  right: 0rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  /* background: lightblue; */
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
