--- a/input.css
+++ b/input.css
@@ -1,35 +1,36 @@
 :root {
   font-size: 62.5%;
+  --warning-color: red;
 }
 #user-input {
-  padding: 0.5rem;
+  padding: 5px;
   margin: 1rem;
   width: 20rem;
   height: 2.5rem;
 }
 #user-choice-radio {
-  padding: 0.5rem;
+  padding: 5px;
   margin: 1rem;
 }
 #user-choice-check {
-  padding: 0.5rem;
+  padding: 5px;
   margin: 1rem;
 }
 .input-label {
   font-size: 2rem;
   margin: 1rem;
-  padding: 0.5rem;
+  padding: 5px;
 }
 .user-radio {
   font-size: 2rem;
   margin: 1rem;
-  padding: 0.5rem;
+  padding: 5px;
 }
 .user-checkbox {
   font-size: 2rem;
   margin: 1rem;
-  padding: 0.5rem;
+  padding: 5px;
 }
 .user-input-warning {
-  border: 0.1rem solid red;
+  border: 1px solid var(--warning-color);
 }
