--- a/snackbar.css
+++ b/snackbar.css
@@ -1,14 +1,15 @@
 :root {
   font-size: 62.5%;
   box-sizing: border-box;
+  --primary-color: #63edff;
+  --text-color: #333;
 }
 #snackbar-message {
   padding: 1rem;
   visibility: hidden;
   width: 30rem;
   height: 3rem;
-  background-color: #333;
-  color: #fff;
+  color: var(--text-color);
   position: fixed;
   z-index: 1;
   left: 55rem;
@@ -18,13 +19,13 @@
 .button-container {
   padding: 1rem 2rem;
   margin: 1rem;
-  background-color: #63edff;
+  background-color: var(--primary-color);
   font-weight: 500;
   font-size: 1.8rem;
   border: none;
-  border-radius: 1rem 1rem 1rem 1rem;
+  border-radius: 1rem;
 
-  color: black;
+  color: var(--text-color);
   font-family: "roboto";
 }
 .snack-exit {
@@ -36,7 +37,6 @@
 
 .show-bar {
   visibility: visible !important;
-  /* animation:fadein 0.5s; */
 }
 .hide-snack {
   display: block;
@@ -46,15 +46,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #63edff;
+  background-color: var(--primary-color);
 }
 #snackbar-message-left {
   padding: 1rem;
   visibility: hidden;
   width: 30rem;
   height: 3rem;
-  background-color: #333;
-  color: #fff;
+
+  color: var(--text-color);
   position: fixed;
   z-index: 1;
 
@@ -63,15 +63,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #63edff;
+  background-color: var(--primary-color);
 }
 #snackbar-message-center {
   padding: 1rem;
   visibility: hidden;
   width: 30rem;
   height: 3rem;
-  background-color: #333;
-  color: #fff;
+
+  color: var(--text-color);
   position: fixed;
   z-index: 1;
 
@@ -81,5 +81,5 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #63edff;
+  background-color: var(--primary-color);
 }
