--- a/cards.css
+++ b/cards.css
@@ -1,12 +1,13 @@
 :root {
   font-size: 62.5%;
   box-sizing: border-box;
+  --primary-color: #49a0eb;
+  --secondary-color: khaki;
 }
 .wrapper {
   position: relative;
   width: 100%;
   min-height: 38rem;
-
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
@@ -34,7 +35,7 @@
 }
 .top-1 p {
   margin-left: 1.4rem;
-  margin-top: -0.2rem;
+  margin-top: -2px;
   line-height: 2rem;
   width: 20rem;
   font-size: 1.8rem;
@@ -74,7 +75,6 @@
 }
 .cards-example {
   position: relative;
-
   width: 35rem;
 }
 
@@ -106,18 +106,15 @@
   width: 20rem;
   height: auto;
   margin-right: 2rem;
-  margin-left: 0.5rem;
+  margin-left: 5px;
   border-radius: 5%;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
-/* .card-body{
-      font-size:2rem;
-      margin:0.5rem;
-  } */
+
 .card-title {
   font-size: 3rem;
-  margin: 0.4rem;
+  margin: 4px;
 }
 .original-price {
   font-size: 2rem;
@@ -129,12 +126,12 @@
   font-size: 2rem;
 }
 .btn-container-horizontal {
-  margin-left: -0.3rem;
-  margin: 0.5rem;
+  margin-left: -3px;
+  margin: 5px;
 }
 .card-content {
   font-size: 2rem;
-  margin-left: 0.8rem;
+  margin-left: 8px;
   margin-top: -1.5rem;
   margin-bottom: 1rem;
 }
@@ -144,10 +141,8 @@
 .card-exit {
   display: flex;
   flex-direction: column;
-
   position: relative;
   width: 30rem;
-
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 .exit-button {
@@ -155,9 +150,9 @@
   top: 0;
   right: 0;
   padding: 1rem;
-  margin-right: 0.5rem;
+  margin-right: 5px;
   border: none;
-  margin-top: 0.5rem;
+  margin-top: 5px;
   background-color: white;
   border-radius: 50%;
   z-index: 1;
@@ -175,9 +170,6 @@
 }
 .cart-button {
   padding: 0.8rem;
-  /* width:10rem;
-      height:3rem; */
-
   border: none;
   outline: none;
   background: black;
@@ -202,7 +194,7 @@
   margin-bottom: -1rem;
 }
 .content h4 {
-  margin-bottom: -0.5rem;
+  margin-bottom: -5px;
 }
 .content {
   display: inline-flex;
@@ -221,17 +213,7 @@
 .discount-price {
   font-size: 1.5rem;
 }
-/* .button{
-      display:inline-flex;
-      justify-content:flex-end;
-      flex-direction:column;
-       width:100%;
-      height:100%; 
-      padding:1rem;
-      color:black;
-      font-size:2rem;
-      box-sizing:border-box;
-  } */
+
 .content,
 .background {
   grid-column: 1/2;
@@ -260,19 +242,19 @@
   font-weight: 500;
   font-size: 1.8rem;
   border: none;
-  border-radius: 1rem 1rem 1rem 1rem;
+  border-radius: 1rem;
 
   color: black;
   font-family: "roboto";
 }
 .primary-button {
-  background-color: #49a0eb;
+  background-color: var(--primary-color);
 }
 .opaque-button {
-  background-color: khaki;
+  background-color: var(--secondary-color);
   width: 50%;
-  margin-bottom: -0.3rem;
+  margin-bottom: -3px;
 }
 .secondary-button {
-  background-color: khaki;
+  background-color: var(--secondary-color);
 }
