--- a/sidebar.css
+++ b/sidebar.css
@@ -4,9 +4,10 @@
 }
 :root {
   font-size: 62.5%;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   padding: 0;
   margin: 0;
+  --border-color: #e9e9e9;
+  --primary-color: #49a0eb;
 }
 .side-bar {
   position: fixed;
@@ -14,7 +15,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   width: 25rem;
-  background-color: grey;
+  background-color: var(--primary-color);
   height: 100vh;
 }
 .side-bar h1 {
@@ -23,12 +24,12 @@
 .side-bar h2 {
   font-size: 1.7rem;
   margin: 1rem;
-  border-bottom: 0.1rem solid black;
+  border-bottom: 1px solid black;
 }
 .side-bar-heading {
   display: flex;
   justify-content: space-between;
-  border-bottom: 0.1rem solid grey;
+  border-bottom: 1px solid grey;
 }
 
 #user-choice-radio {
@@ -71,7 +72,7 @@
   font-size: 1.5rem;
 }
 #user-choice-range {
-  border: 2px solid #e9e9e9;
+  border: 2px solid var(--border-color);
   box-sizing: border-box;
   border-radius: 100px;
   transform: matrix(1, 0, 0, -1, 0, 0);
