--- a/navbar.css
+++ b/navbar.css
@@ -4,6 +4,10 @@
 }
 :root {
   font-size: 62.5%;
+  --primary-color: #49a0eb;
+  --secondary-color: #63edff;
+  --icon-button-color: #333333;
+  --icon-button-bg-color: lavenderblush;
 }
 a {
   font-family: Arial, Helvetica, sans-serif;
@@ -13,7 +17,7 @@ a {
 .navbar {
   width: 100%;
   height: 8rem;
-  background-color: #49a0eb;
+  background-color: var(--primary-color);
   display: flex;
   justify-content: center;
 }
@@ -32,8 +36,6 @@ a {
   justify-content: space-evenly;
   margin-left: 0;
   flex: 60%;
-
-  /* align-items:center; */
 }
 .navbar .leftside .links {
   display: flex;
@@ -60,7 +62,7 @@ a {
 .navbar .rightside button {
   height: 3.65rem;
   width: 5rem;
-  background-color: #63edff;
+  background-color: var(--secondary-color);
   border: none;
   cursor: pointer;
 }
@@ -82,8 +84,8 @@ a {
   align-items: center;
   width: 4rem;
   height: 4rem;
-  color: #333333;
-  background: lavenderblush;
+  color: var(--icon-button-color);
+  background: var(--icon-button-bg-color);
   border: none;
   outline: none;
   border-radius: 50%;
@@ -97,7 +99,6 @@ a {
   right: 0rem;
   width: 1.5rem;
   height: 1.5rem;
-  /* background: lightblue; */
   color: black;
   display: flex;
   justify-content: center;
