--- a/index.css
+++ b/index.css
@@ -111,10 +111,10 @@
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
-/* .card-body{
-        font-size:2rem;
-        margin:0.5rem;
-    } */
+.card-body {
+  font-size: 2rem;
+  margin-top: 1.3rem;
+}
 .card-title {
   font-size: 3rem;
   margin: 0.4rem;
